<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ZeroFragment">


    <TextView
        android:id="@+id/titulo_fragmento_inicial"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/purple_200"
        android:gravity="center"
        android:text="@string/tipos_de_listas"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/boton_lista_palabras"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_marginTop="150dp"
        app:cornerRadius="30dp"
        android:text="@string/lista_palabras"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/titulo_fragmento_inicial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/boton_lista_imagenes"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_marginTop="150dp"
        app:cornerRadius="30dp"
        android:text="@string/lista_imagenes"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/boton_lista_palabras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>